@@ -1,4 +1,4 @@
-package it.pagopa.pn.downtime.service;
+package it.pagopa.pn.downtime.service.impl;
 
 import java.time.OffsetDateTime;
 import java.util.ArrayList;
@@ -6,8 +6,9 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
@@ -22,42 +23,34 @@ import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBQueryExpression;
 import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBScanExpression;
 import com.amazonaws.services.dynamodbv2.model.AttributeValue;
 
+import it.pagopa.pn.downtime.generated.openapi.server.v1.dto.PnDowntimeEntry;
+import it.pagopa.pn.downtime.generated.openapi.server.v1.dto.PnDowntimeHistoryResponse;
+import it.pagopa.pn.downtime.generated.openapi.server.v1.dto.PnFunctionality;
+import it.pagopa.pn.downtime.generated.openapi.server.v1.dto.PnFunctionalityStatus;
+import it.pagopa.pn.downtime.generated.openapi.server.v1.dto.PnStatusResponse;
 import it.pagopa.pn.downtime.mapper.DowntimeLogsMapper;
 import it.pagopa.pn.downtime.model.DowntimeLogs;
-import it.pagopa.pn.downtime.pn_downtime_logs.model.PnDowntimeEntry;
-import it.pagopa.pn.downtime.pn_downtime_logs.model.PnDowntimeHistoryResponse;
-import it.pagopa.pn.downtime.pn_downtime_logs.model.PnFunctionality;
-import it.pagopa.pn.downtime.pn_downtime_logs.model.PnFunctionalityStatus;
-import it.pagopa.pn.downtime.pn_downtime_logs.model.PnStatusResponse;
+import it.pagopa.pn.downtime.service.DowntimeLogsService;
 import it.pagopa.pn.downtime.util.DowntimeLogUtil;
+import lombok.CustomLog;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 
-/**
- * The Class DowntimeLogsServiceImpl.
- */
 @Service
-
-/**
- * Instantiates a new downtime logs service impl.
- */
 @RequiredArgsConstructor
-
-/** The Constant log. */
-@Slf4j
+@CustomLog
 public class DowntimeLogsServiceImpl implements DowntimeLogsService {
 
-	/** The dynamo DB mapper. Log */
 	@Autowired
 	private DynamoDBMapper dynamoDBMapper;
 
-	/** The downtime logs mapper. */
 	@Autowired
-	DowntimeLogsMapper downtimeLogsMapper;
+	private DowntimeLogsMapper downtimeLogsMapper;
 
 	@Value("${history.index}")
 	private String historyIndex;
 
+	@Value("${amazon.dynamodb.log.endpoint}")
+	private String downtimeLogsTableName;
 	/**
 	 * Gets the status history.
 	 *
@@ -71,7 +64,7 @@ public class DowntimeLogsServiceImpl implements DowntimeLogsService {
 	@Override
 	public PnDowntimeHistoryResponse getStatusHistory(OffsetDateTime fromTime, OffsetDateTime toTime,
 			List<PnFunctionality> functionality, String page, String size) {
-
+		
 		log.info("getStatusHistory - Input - fromTime: " + fromTime.toString() + " toTime: "
 				+ (toTime != null ? toTime.toString() : "") + " functionality: "
 				+ (functionality != null ? functionality.toString() : "") + " page: " + page + " size: " + size);
@@ -131,7 +124,8 @@ public class DowntimeLogsServiceImpl implements DowntimeLogsService {
 		}
 
 		Map<String, AttributeValue> attributes = new HashMap<>();
-		List<String> values = functionality.stream().map(PnFunctionality::getValue).collect(Collectors.toList());
+
+		List<String> values = functionality.stream().filter(Objects::nonNull).map(PnFunctionality::getValue).toList();
 
 		String expression = "";
 		for (String s : values) {
@@ -190,7 +184,7 @@ public class DowntimeLogsServiceImpl implements DowntimeLogsService {
 			pnStatusResponseEntry.setStatus(HttpStatus.OK.value());
 			pnStatusResponseEntry.setTitle(HttpStatus.OK.name());
 			pnStatusResponseEntry.setDetail(HttpStatus.OK.name());
-			log.info("Response: " + pnStatusResponseEntry.toString());
+            log.info("Response: " + pnStatusResponseEntry.toString());
 		} catch (Exception e) {
 			log.error("Error occurred while fetching current status: ", e);
 			pnStatusResponseEntry.setStatus(HttpStatus.INTERNAL_SERVER_ERROR.value());
@@ -214,6 +208,7 @@ public class DowntimeLogsServiceImpl implements DowntimeLogsService {
 	@Override
 	public void saveDowntimeLogs(String functionalityStartYear, OffsetDateTime startDate, PnFunctionality functionality,
 			String startEventUuid, String uuid) {
+		
 		DowntimeLogs downtimeLogs = new DowntimeLogs();
 		downtimeLogs.setFunctionalityStartYear(functionalityStartYear);
 		OffsetDateTime newStartDate = DowntimeLogUtil.getGmtTimeFromOffsetDateTime(startDate);
@@ -225,7 +220,9 @@ public class DowntimeLogsServiceImpl implements DowntimeLogsService {
 		downtimeLogs.setUuid(uuid);
 		downtimeLogs.setFileAvailable(false);
 		downtimeLogs.setHistory("downtimeHistory");
+		log.debug("Inserting data {} in DynamoDB table {}", downtimeLogs.toString(), StringUtils.substringAfterLast(downtimeLogsTableName, "/"));
 		dynamoDBMapper.save(downtimeLogs);
+		log.info("Inserted data in DynamoDB table {}", StringUtils.substringAfterLast(downtimeLogsTableName, "/"));
 	}
 
 	@Override
